--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.30",
+    "@types/reach__router": "^1.3.0",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
