--- a/client/package.json
+++ b/client/package.json
@@ -46,5 +46,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:9000",
+  "devDependencies": {}
 }
