--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apollo-server-express": "^2.11.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "googleapis": "^48.0.0",
     "graphql": "^14.6.0",
@@ -21,6 +22,7 @@
     "mongodb": "^3.5.5"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
     "@types/graphql": "^14.5.0",
     "@types/lodash.merge": "^4.6.6",
