stripe resolvers complete 2

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_S_PUBLISH_KEY=pk_test_7KhZ3mPWoyY1tPamtOfz81OI00TkIHItWB
-REACT_APP_S_CLIENT_ID=ca_GzGvfVGZDQlLlzkWRbTVZOP6ewlZL9Iz
+REACT_APP_S_PUBLISH_KEY=
+REACT_APP_S_CLIENT_ID=
