--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,10 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
-    "antd": "^4.0.2",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
     "react": "^16.13.0",
+    "antd": "3.26.13",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
