--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,16 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-stripe-elements": "^6.0.4",
+    "antd": "3.26.13",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
     "react": "^16.13.0",
-    "antd": "3.26.13",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-stripe-elements": "^6.1.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
