--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "dotenv -e .env nodemon src/server.ts",
     "build": "dotenv -e .env tsc -p ./",
+    "build:prod": "tsc -p ./",
     "seed": "dotenv -e .env ts-node temp/seed.ts",
     "clear": "dotenv -e .env ts-node temp/clear.ts"
   },
@@ -16,6 +17,7 @@
     "apollo-server-express": "^2.11.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.21.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "googleapis": "^48.0.0",
@@ -25,6 +27,7 @@
     "stripe": "^8.37.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.3",
     "@types/google__maps": "^0.5.12",
