--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "dotenv -e .env nodemon src/server.ts",
     "build": "dotenv -e .env tsc -p ./",
-    "build:prod": "tsc -p ./",
+    "build:prod": "tsc -p ./src",
     "seed": "dotenv -e .env ts-node temp/seed.ts",
     "clear": "dotenv -e .env ts-node temp/clear.ts"
   },
